--- a/estilo.css
+++ b/estilo.css
@@ -35,7 +35,7 @@
     border-radius: 50%;
     padding:1;
     background-color: skyblue;
-    border:1px dashed red;      
+    border:1px dashed skyblue;      
 }
 #personal h1{    
     text-shadow: 5px 5px 10px dimgray;
